[build-system]
requires = ["setuptools>=40.8.0",
            "setuptools_scm[toml]>=6.2",
            "wheel",
            "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "MidlineIdentifier"
version = "1.0.0"
description = "Polarization analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
      "scanpy",
      "scikit-image",
      "scikit-learn",
      "statsmodels",
      "scipy<1.12.0",
      "numpy",
      "pandas",
      "pydeseq2",
      "spatialde",
      "matplotlib",
      "seaborn",
      "adjustText",
      "tqdm",
      "typing",
      'numpydoc',
]

authors = [
  {name = "Jixing Zhong", email = "jixing.zhong@epfl.ch"},

]